--- a/package.json
+++ b/package.json
@@ -10,12 +10,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "^10.1.1",
+    "file-saver": "^2.0.5",
+    "popup-ui": "^1.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-axios": "^0.17.1",
+    "react-native-card-ui": "^1.1.3",
+    "react-native-chooser": "^1.7.0",
+    "react-native-cli": "^2.0.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-picker": "^4.7.3",
+    "react-native-imaged-card-view": "^0.0.11",
+    "react-native-multi-selectbox": "^1.5.0",
+    "react-native-number-please": "^1.0.5",
+    "react-native-paper": "^4.4.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-simple-store": "^2.0.2",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "^0.17.1",
+    "react-native-webview": "^11.18.2",
+    "rn-material-ui-textfield": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
