--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~44.0.0",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "^0.11.6",
     "expo-web-browser": "^10.1.1",
     "file-saver": "^2.0.5",
     "popup-ui": "^1.2.2",
