--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animated-loader": "^0.0.9",
     "react-native-axios": "^0.17.1",
     "react-native-card-ui": "^1.1.3",
     "react-native-chooser": "^1.7.0",
@@ -42,7 +43,8 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "^0.17.1",
     "react-native-webview": "^11.18.2",
-    "rn-material-ui-textfield": "^1.0.6"
+    "rn-material-ui-textfield": "^1.0.6",
+    "expo-splash-screen": "~0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
